pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-default-backend-no-rules-limit-allowlist.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-default-backend-no-rules-limit-allowlist
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-allowlist: "10.0.0.0/24"

spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
